fix: PresentationRemote - not visible on black background

--- a/src/components/editor/PresentationRemote.module.scss
+++ b/src/components/editor/PresentationRemote.module.scss
@@ -3,9 +3,6 @@
 }
 
 .ButtonGroup {
-  @apply flex flex-row items-center justify-center gap-2 mr-5 mb-5;
-}
-
-.Icon {
-  filter: drop-shadow(1px 1px 2px white);
+  @apply flex flex-row items-center justify-center mr-5 mb-5;
+  background-color: var(--whiteA11);
 }
